<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    tools:context=".controller.Menu">

    <TextView
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/menu"
        android:text="@string/menu"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/menu_scanner"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu">

        <ImageView
            android:id="@+id/menu_scanner_image"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/menu_scanner"
            app:srcCompat="@drawable/loupe" />

        <Button
            android:id="@+id/menu_scanner_button"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:contentDescription="@string/menu_scanner"
            android:text="@string/menu_scanner" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_jouer"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_scanner">

        <ImageView
            android:id="@+id/menu_jouer_image"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/menu_jouer"
            app:srcCompat="@drawable/ballon" />

        <Button
            android:id="@+id/menu_jouer_button"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:contentDescription="@string/menu_jouer"
            android:text="@string/menu_jouer" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_infos"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_jouer">

        <ImageView
            android:id="@+id/menu_infos_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:contentDescription="@string/menu_infos"
            app:srcCompat="@drawable/ampoule" />

        <Button
            android:id="@+id/menu_infos_button"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:contentDescription="@string/menu_infos"
            android:text="@string/menu_infos" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_exploits"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_infos">

        <ImageView
            android:id="@+id/menu_exploits_image"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/menu_exploits"
            app:srcCompat="@drawable/chapeau" />

        <Button
            android:id="@+id/menu_exploits_button"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:contentDescription="@string/menu_exploits"
            android:text="@string/menu_exploits" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="145dp"
        android:layout_height="117dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/enib"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="66dp"
        android:layout_height="69dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round"
        tools:ignore="ContentDescription" />

</android.support.constraint.ConstraintLayout>